# raytracing_in_one_weekend

./: .gitignore  Cargo.toml  README.md  image.ppm
src/: aabb.rs  bvh_node.rs  camera.rs  hittable.rs  image_env_builder.rs  main.rs  material.rs  objects.rs  perlin.rs  random.rs  ray.rs  sphere.rs  texture.rs  vec3.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lamberian.rs  metal.rs
src/objects/: box_render.rs  constant_medium.rs  moving_sphere.rs  rect.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  y_rotation.rs  yz_rect.rs
src/texture/: checker_texture.rs  image_texture.rs  noise_texture.rs  solid_color.rs
